external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_return.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_return.move:3:20
  │
3 │         (return ())(0, 1);
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected ';'
